fix(aap): address CodeQL findings
- LayerValidationResult.errors: List.copyOf for genuinely immutable
  field (was Collections.unmodifiableList on a defensive copy).
- OpenAgentAuthException.errorParams: same treatment.
- DefaultKeyManagerTest.shouldRotateKeySuccessfully: drop unused
  newKeyPair local that referenced an unrelated key id.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>